<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardProfilePicture"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:src="@drawable/headimage"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textHello"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/hello_user"
        android:textColor="#212121"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/cardProfilePicture"
        app:layout_constraintEnd_toStartOf="@id/cardProfilePicture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/cardProfilePicture"/>

    <TextView
            android:id="@+id/whatAreWe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
        android:text="@string/what_are_we_"
            android:textColor="#212121"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/cardProfilePicture"/>

    <TextView
            android:id="@+id/textStudying"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="studying today?"
            android:textColor="#757575"
            android:textSize="40sp"
            app:layout_constraintTop_toBottomOf="@id/whatAreWe"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/yearsViewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:paddingStart="60dp"
        android:paddingEnd="60dp"
        app:layout_constraintTop_toBottomOf="@id/textStudying"
        app:layout_constraintBottom_toTopOf="@id/logoutbtn"
        />

    <Button
        android:id="@+id/logoutbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#633bfa"
        android:layout_marginBottom="60dp"
        android:text="@string/logout"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="InvalidId" />

</androidx.constraintlayout.widget.ConstraintLayout>